Version 0.9.2   
released 07/27/2014
---

  1683979 more direct check for CLOCK_MONOTONIC
  f9eda69 Tweak for FreeBSD compilation
  217fe4f Add conditional compilation for Linux
  872c1e8 Trivial fixes for unused variables

Version 0.9 r289
released 9/10/2013
---

 * Use GNU autotools as the default build system.

 * Block all signals when executing work on the overcommit queues.
   (Credit: Jean-Charles BERTIN)

Version 0.8.2 r195
released 7/16/2011
---

 * Use LDADD instead of LDFLAGS (fixes Debian bug #631674)
 * Make the "idle" test optional as it does not work on 32-bit Linux
 * Use time_t for PWQ_SPIN_USEC to fix a build problem on 32-bit Linux

Version 0.8.1 r?
released 7/16/2011
---

 * Uploaded to Debian, but not generally released.

Version 0.8 r190
released 7/08/2011
---

 * Remove the 'struct worker' datatype and related housekeeping chores.

 * Fix incorrect usage of pthread_cond_timedwait() for overcommit threads. 

 * Various improvements and bug fixes for the Windows port.

 * Prevent a race condition that could cause a use-after-free if a witem
   were freed before manager_workqueue_additem() returned.

 * Prevent races involving the scoreboard variables.

 * Fix a lost wakeup bug when calling worker_stop().

 * Finally fixed the long standing TODO and removed the global lock for pwq enqueue/dequeue.

 * Only signal wakeups for the pool if there are idle threads available to process data. 

 * Use atomics for updating the mask with pending workqueues as the global lock was removed.

 * Added optional idle thread spinning by using the PWQ_SPIN_USEC and PWQ_SPIN_THREADS environment variables. The accrued changes decrease latency from 7-8 microseconds to ~1 +- 0.5 microsecond depending on spin configuration. By default, no spinning will be done.

 * Renamed USE_RT_THREADS to PWQ_RT_THREADS for consistency. 
